<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_twenty">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_details_header"
            android:paddingTop="@dimen/padding_20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_edit_update"
            android:layout_width="@dimen/layoutwidth_150"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_twenty"

            android:text="@string/password_text" />

        <EditText
            android:id="@+id/password_edit_update"
            android:layout_width="@dimen/layoutwidth_150"

            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/fullname_text"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_twenty"
            android:text="@string/fullname_text" />

        <EditText
            android:id="@+id/fullname_edit_update"
            android:layout_width="@dimen/layoutwidth_150"

            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_twenty"
            android:text="Enter the Email" />

        <EditText
            android:id="@+id/email_edit_update"
            android:layout_width="@dimen/width_300"

            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/mobile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="@dimen/padding_20"
            android:text="@string/mobile_text" />

        <EditText
            android:id="@+id/mobile_edit_update"
            android:layout_width="@dimen/layoutwidth_150"

            android:layout_height="wrap_content"
            android:inputType="phone" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_button" />
    </LinearLayout>

</LinearLayout>
